[gd_scene load_steps=14 format=2]

[ext_resource path="res://Graphics/UI/Battle/PartyInfoPlate.png" type="Texture" id=1]
[ext_resource path="res://Fonts/EBMain.tres" type="DynamicFont" id=2]
[ext_resource path="res://Graphics/UI/Battle/hp_pp_numbers.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/Battle/PartyInfoPlate.gd" type="Script" id=4]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=5]
[ext_resource path="res://Fonts/HitNumber.tres" type="BitmapFont" id=6]
[ext_resource path="res://Fonts/BottleRocket.tres" type="DynamicFont" id=7]
[ext_resource path="res://Graphics/UI/Battle/PartyInfoPlateBasic.png" type="Texture" id=8]
[ext_resource path="res://Graphics/UI/Battle/PartyInfoPlateHighlight.png" type="Texture" id=9]
[ext_resource path="res://Graphics/UI/Battle/label_hp.png" type="Texture" id=10]
[ext_resource path="res://Graphics/UI/Battle/label_pp.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 55, 19 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Shake"
length = 0.333333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 55, 17 ), Vector2( 55, 20 ) ]
}

[node name="PartyInfoPlate" type="TextureRect"]
material = ExtResource( 5 )
margin_right = 65.0
margin_bottom = 49.0
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="HP_H" type="Sprite" parent="."]
position = Vector2( 28, 21 )
texture = ExtResource( 3 )
centered = false
hframes = 8
vframes = 10

[node name="HP_T" type="Sprite" parent="."]
position = Vector2( 37, 21 )
texture = ExtResource( 3 )
centered = false
hframes = 8
vframes = 10

[node name="HP_O" type="Sprite" parent="."]
position = Vector2( 46, 21 )
texture = ExtResource( 3 )
centered = false
hframes = 8
vframes = 10

[node name="PP_H" type="Sprite" parent="."]
position = Vector2( 28, 33 )
texture = ExtResource( 3 )
centered = false
hframes = 8
vframes = 10

[node name="PP_T" type="Sprite" parent="."]
position = Vector2( 37, 33 )
texture = ExtResource( 3 )
centered = false
hframes = 8
vframes = 10

[node name="PP_O" type="Sprite" parent="."]
position = Vector2( 46, 33 )
texture = ExtResource( 3 )
centered = false
hframes = 8
vframes = 10

[node name="hp_label" type="TextureRect" parent="."]
material = ExtResource( 5 )
margin_left = 11.0
margin_top = 20.0
margin_right = 24.0
margin_bottom = 29.0
texture = ExtResource( 10 )

[node name="pp_label" type="TextureRect" parent="."]
material = ExtResource( 5 )
margin_left = 11.0
margin_top = 32.0
margin_right = 24.0
margin_bottom = 41.0
texture = ExtResource( 11 )

[node name="BasicPlate" type="TextureRect" parent="."]
material = ExtResource( 5 )
margin_left = -6.0
margin_right = 73.0
margin_bottom = 49.0
texture = ExtResource( 8 )

[node name="MaxHP" type="Label" parent="BasicPlate"]
margin_left = 25.0
margin_top = 17.0
margin_right = 72.0
margin_bottom = 28.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 7 )
text = "200/900"
align = 1

[node name="MaxPP" type="Label" parent="BasicPlate"]
margin_left = 25.0
margin_top = 29.0
margin_right = 72.0
margin_bottom = 40.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 7 )
text = "20/900"
align = 1

[node name="hp_label" type="TextureRect" parent="BasicPlate"]
material = ExtResource( 5 )
margin_left = 9.0
margin_top = 20.0
margin_right = 22.0
margin_bottom = 29.0
texture = ExtResource( 10 )

[node name="pp_label" type="TextureRect" parent="BasicPlate"]
material = ExtResource( 5 )
margin_left = 9.0
margin_top = 32.0
margin_right = 22.0
margin_bottom = 41.0
texture = ExtResource( 11 )

[node name="Highlight" type="NinePatchRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.196078 )
material = ExtResource( 5 )
anchor_right = 1.0
margin_bottom = 49.0
texture = ExtResource( 9 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Name" type="Label" parent="."]
margin_left = -3.0
margin_top = 1.0
margin_right = 72.0
margin_bottom = 16.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "ЩЩЩЩЩЩЩ"
align = 1
valign = 1

[node name="HPExclamation" type="Label" parent="."]
visible = false
margin_left = 55.0
margin_top = 19.0
margin_right = 66.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="HPExclamation"]
anims/RESET = SubResource( 1 )
anims/Shake = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
